--- a/maket_bem_m2/index.html
+++ b/maket_bem_m2/index.html
@@ -97,120 +97,130 @@
         <section class="menu">
             <div class="container">
                 <div class="menu__inner">
-                    <ul class="preview__list">
-                        <li class="preview__item--move">
-                            <div class="preview__desc">
-                                <p class="preview__price">$24.95</p>
-                                <h4 class="preview__title">Grilled American Fillet</h4>
-                                <div class="preview__divider"></div>
-                                <p class="preview__text">Pork fillet, ginger, garlic, honey, pepper & canola oil.creamy
-                                    chesapeake crab dip with artichoke, baked and topped with cheddar cheese, with
-                                    crusty bread.
-                                </p>
-                            </div>
-                            <div class="preview__img">
-                                <img src="" alt="">
-                            </div>
-                        </li>
-                        <li class="preview__item">
-                            <div class="preview__desc">
-                                <p class="preview__price">$24.95</p>
-                                <h4 class="preview__title">Grilled American Fillet</h4>
-                                <div class="preview__divider"></div>
-                                <p class="preview__text">Pork fillet, ginger, garlic, honey, pepper & canola oil.creamy
-                                    chesapeake crab dip with artichoke, baked and topped with cheddar cheese, with
-                                    crusty bread.
-                                </p>
-                            </div>
-                            <div class="preview__img">
-                                <img src="" alt="">
-                            </div>
-                        </li>
-                        <li class="preview__item">
-                            <div class="preview__desc">
-                                <p class="preview__price">$24.95</p>
-                                <h4 class="preview__title">Grilled American Fillet</h4>
-                                <div class="preview__divider"></div>
-                                <p class="preview__text">Pork fillet, ginger, garlic, honey, pepper & canola oil.creamy
-                                    chesapeake crab dip with artichoke, baked and topped with cheddar cheese, with
-                                    crusty bread.
-                                </p>
-                            </div>
-                            <div class="preview__img">
-                                <img src="" alt="">
-                            </div>
-                        </li>
-                        <li class="preview__item">
-                            <div class="preview__desc">
-                                <p class="preview__price">$24.95</p>
-                                <h4 class="preview__title">Grilled American Fillet</h4>
-                                <div class="preview__divider"></div>
-                                <p class="preview__text">Pork fillet, ginger, garlic, honey, pepper & canola oil.creamy
-                                    chesapeake crab dip with artichoke, baked and topped with cheddar cheese, with
-                                    crusty bread.
-                                </p>
-                            </div>
-                            <div class="preview__img">
-                                <img src="" alt="">
-                            </div>
-                        </li>
-                        <li class="preview__item">
-                            <div class="preview__desc">
-                                <p class="preview__price">$24.95</p>
-                                <h4 class="preview__title">Grilled American Fillet</h4>
-                                <div class="preview__divider"></div>
-                                <p class="preview__text">Pork fillet, ginger, garlic, honey, pepper & canola oil.creamy
-                                    chesapeake crab dip with artichoke, baked and topped with cheddar cheese, with
-                                    crusty bread.
-                                </p>
-                            </div>
-                            <div class="preview__img">
-                                <img src="" alt="">
-                            </div>
-                        </li>
-                        <li class="preview__item">
-                            <div class="preview__desc">
-                                <p class="preview__price">$24.95</p>
-                                <h4 class="preview__title">Grilled American Fillet</h4>
-                                <div class="preview__divider"></div>
-                                <p class="preview__text">Pork fillet, ginger, garlic, honey, pepper & canola oil.creamy
-                                    chesapeake crab dip with artichoke, baked and topped with cheddar cheese, with
-                                    crusty bread.
-                                </p>
-                            </div>
-                            <div class="preview__img">
-                                <img src="" alt="">
-                            </div>
-                        </li>
-                        <li class="preview__item">
-                            <div class="preview__desc">
-                                <p class="preview__price">$24.95</p>
-                                <h4 class="preview__title">Grilled American Fillet</h4>
-                                <div class="preview__divider"></div>
-                                <p class="preview__text">Pork fillet, ginger, garlic, honey, pepper & canola oil.creamy
-                                    chesapeake crab dip with artichoke, baked and topped with cheddar cheese, with
-                                    crusty bread.
-                                </p>
-                            </div>
-                            <div class="preview__img">
-                                <img src="" alt="">
-                            </div>
-                        </li>
-                        <li class="preview__item">
-                            <div class="preview__desc">
-                                <p class="preview__price">$24.95</p>
-                                <h4 class="preview__title">Grilled American Fillet</h4>
-                                <div class="preview__divider"></div>
-                                <p class="preview__text">Pork fillet, ginger, garlic, honey, pepper & canola oil.creamy
-                                    chesapeake crab dip with artichoke, baked and topped with cheddar cheese, with
-                                    crusty bread.
-                                </p>
-                            </div>
-                            <div class="preview__img">
-                                <img src="" alt="">
-                            </div>
-                        </li>
-                    </ul>
+                    <div class="preview">
+                        <ul class="preview__list">
+                            <li class="preview__item--move">
+                                <div class="preview__desc">
+                                    <p class="preview__price">$24.95</p>
+                                    <h4 class="preview__title">Grilled American Fillet</h4>
+                                    <div class="preview__divider"></div>
+                                    <p class="preview__text">Pork fillet, ginger, garlic, honey, pepper & canola
+                                        oil.creamy
+                                        chesapeake crab dip with artichoke, baked and topped with cheddar cheese, with
+                                        crusty bread.
+                                    </p>
+                                </div>
+                                <div class="preview__img">
+                                    <img src="" alt="">
+                                </div>
+                            </li>
+                            <li class="preview__item--move">
+                                <div class="preview__desc">
+                                    <p class="preview__price">$24.95</p>
+                                    <h4 class="preview__title">Grilled American Fillet</h4>
+                                    <div class="preview__divider"></div>
+                                    <p class="preview__text">Pork fillet, ginger, garlic, honey, pepper & canola
+                                        oil.creamy
+                                        chesapeake crab dip with artichoke, baked and topped with cheddar cheese, with
+                                        crusty bread.
+                                    </p>
+                                </div>
+                                <div class="preview__img">
+                                    <img src="" alt="">
+                                </div>
+                            </li>
+                            <li class="preview__item--move">
+                                <div class="preview__img">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="preview__desc">
+                                    <p class="preview__price">$24.95</p>
+                                    <h4 class="preview__title">Grilled American Fillet</h4>
+                                    <div class="preview__divider"></div>
+                                    <p class="preview__text">Pork fillet, ginger, garlic, honey, pepper & canola
+                                        oil.creamy
+                                        chesapeake crab dip with artichoke, baked and topped with cheddar cheese, with
+                                        crusty bread.
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="preview__item--move">
+                                <div class="preview__img">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="preview__desc">
+                                    <p class="preview__price">$24.95</p>
+                                    <h4 class="preview__title">Grilled American Fillet</h4>
+                                    <div class="preview__divider"></div>
+                                    <p class="preview__text">Pork fillet, ginger, garlic, honey, pepper & canola
+                                        oil.creamy
+                                        chesapeake crab dip with artichoke, baked and topped with cheddar cheese, with
+                                        crusty bread.
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="preview__item--move">
+                                <div class="preview__desc">
+                                    <p class="preview__price">$24.95</p>
+                                    <h4 class="preview__title">Grilled American Fillet</h4>
+                                    <div class="preview__divider"></div>
+                                    <p class="preview__text">Pork fillet, ginger, garlic, honey, pepper & canola
+                                        oil.creamy
+                                        chesapeake crab dip with artichoke, baked and topped with cheddar cheese, with
+                                        crusty bread.
+                                    </p>
+                                </div>
+                                <div class="preview__img">
+                                    <img src="" alt="">
+                                </div>
+                            </li>
+                            <li class="preview__item--move">
+                                <div class="preview__desc">
+                                    <p class="preview__price">$24.95</p>
+                                    <h4 class="preview__title">Grilled American Fillet</h4>
+                                    <div class="preview__divider"></div>
+                                    <p class="preview__text">Pork fillet, ginger, garlic, honey, pepper & canola
+                                        oil.creamy
+                                        chesapeake crab dip with artichoke, baked and topped with cheddar cheese, with
+                                        crusty bread.
+                                    </p>
+                                </div>
+                                <div class="preview__img">
+                                    <img src="" alt="">
+                                </div>
+                            </li>
+                            <li class="preview__item--move">
+                                <div class="preview__img">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="preview__desc">
+                                    <p class="preview__price">$24.95</p>
+                                    <h4 class="preview__title">Grilled American Fillet</h4>
+                                    <div class="preview__divider"></div>
+                                    <p class="preview__text">Pork fillet, ginger, garlic, honey, pepper & canola
+                                        oil.creamy
+                                        chesapeake crab dip with artichoke, baked and topped with cheddar cheese, with
+                                        crusty bread.
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="preview__item--move">
+                                <div class="preview__img">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="preview__desc">
+                                    <p class="preview__price">$24.95</p>
+                                    <h4 class="preview__title">Grilled American Fillet</h4>
+                                    <div class="preview__divider"></div>
+                                    <p class="preview__text">Pork fillet, ginger, garlic, honey, pepper & canola
+                                        oil.creamy
+                                        chesapeake crab dip with artichoke, baked and topped with cheddar cheese, with
+                                        crusty bread.
+                                    </p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
