--- a/lesson10_m2/index.html
+++ b/lesson10_m2/index.html
@@ -5,101 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Единицы измерения</title>
+    <title>POSITION</title>
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="units">
-        <div class="units__col">
-            <h2>Абсолютные:</h2>
-            <ul class="units__list">
-                <li class="units__item">PX</li>
-            </ul>
+    <p>
+        Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Жаренные продолжил большой
+        даль несколько родного правилами рыбными собрал безорфографичный великий гор прямо рекламных, раз жизни инициал.
+    </p>
+    <p>Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты.</p>
+    <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Ручеек строчка собрал прямо
+        ведущими? Щеке большой домах буквоград заголовок жизни использовало даль которое всеми страна города жаренные
+        ведущими? Щеке большой домах буквоград заголовок жизни использовало даль которое всеми страна города жаренные
+        ведущими? Щеке большой домах буквоград заголовок жизни использовало даль которое всеми страна города жаренные
+        ведущими? Щеке большой домах буквоград заголовок жизни использовало даль которое всеми страна города жаренные
+        залетают проектах маленькая имени страна своего гор великий!</p>
+    <p>Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Меня города использовало
+        имеет, предупредила семантика жизни алфавит встретил рекламных родного сбить?</p>
+    <p>Далеко-далеко за словесными горами в стране гласных, и согласных живут рыбные тексты. Пустился лучше мир свое
+        взобравшись страна проектах буквенных заглавных заголовок правилами его города, даже эта, использовало дорогу
+        взобравшись страна проектах буквенных заглавных заголовок правилами его города, даже эта, использовало дорогу
+        взобравшись страна проектах буквенных заглавных заголовок правилами его города, даже эта, использовало дорогу
+        подпоясал текста реторический встретил грустный свое себя вскоре над бросил ведущими! Большой, свое?</p>
+    <div class="figura">
+        <div class="cube">
+            <!-- Прямоугольник -->
         </div>
-        <div class="units__col">
-            <h2>Относительные:</h2>
-            <ul class="units__list">
-                <li class="units__item">%</li>
-                <li class="units__item">VH и VW</li>
-                <li class="units__item">EM и REM</li>
-            </ul>
+        <div class="circle">
+            <!-- Круг -->
         </div>
-    </div>
-    <div class="line"></div>
+    </div class="figura">
 
-    <!------------- Проценты ------------->
-
-    <div class="precents">
-        <div class="precents__parent-quad">
-            <div class="precents__child-quad"></div>
-        </div>
-        <br>
-        <br>
-        <br>
-        <p class="precents__text">
-            Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Рыбного оксмокс однажды
-            снова составитель маленькая жизни решила он себя если? То одна инициал ему заголовок большой по всей путь
-            залетают!
-        </p>
-        <br>
-        <br>
-        <br>
-        <div class="precents__quad"></div>
-    </div>
-
-    <div class="line"></div>
-
-    <!------------- VH и VW ------------->
-
-    <div class="vhw">
-        <p class="vhw__text-1">
-            Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.
-        </p>
-        <br>
-        <br>
-        <br>
-        <p class="vhw__text-2">
-            Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.
-        </p>
-        <br>
-        <br>
-        <br>
-        <div class="vhw__quad"></div>
-    </div>
-
-    <div class="line"></div>
-
-    <!------------- EM и REM ------------->
-
-    <div class="em">
-        <p class="em__text">
-            Далеко-далеко за словесными горами в стране гласных и согласных, живут рыбные тексты. Дороге прямо сих пояс
-            щеке текста, точках над проектах ручеек эта переулка себя пунктуация толку лучше обеспечивает? Несколько,
-            рыбного силуэт?
-        </p>
-        <br>
-        <br>
-        <br>
-        <div class="em__quad"></div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <div class="rem">
-        <p class="rem__text">
-            Далеко-далеко за словесными горами в стране гласных и согласных, живут рыбные тексты. Дороге прямо сих пояс
-            щеке текста, точках над проектах ручеек эта переулка себя пунктуация толку лучше обеспечивает? Несколько,
-            рыбного силуэт?
-        </p>
-        <br>
-        <br>
-        <br>
-        <div class="rem__quad"></div>
-    </div>
-
-    <div class="line"></div>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 
 </html>
