--- a/homework_les68_m2/index.html
+++ b/homework_les68_m2/index.html
@@ -15,15 +15,20 @@
         <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Переулка семь текст
             составитель коварных дорогу предложения решила она рекламных!</p>
         <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Назад жаренные грустный
-            рукопись океана текст, проектах послушавшись вопроса вершину! Правилами, запятой? Живет за рыбными что, власти
-            одна великий! Предупреждал парадигматическая напоивший алфавит, послушавшись переписали агентство приставка, на
-            берегу инициал бросил пунктуация они? Приставка, возвращайся! Переписывается подзаголовок своих жаренные своего
-            что власти там однажды над строчка он пунктуация буквоград парадигматическая, свою, ее себя правилами скатился
+            рукопись океана текст, проектах послушавшись вопроса вершину! Правилами, запятой? Живет за рыбными что,
+            власти
+            одна великий! Предупреждал парадигматическая напоивший алфавит, послушавшись переписали агентство приставка,
+            на
+            берегу инициал бросил пунктуация они? Приставка, возвращайся! Переписывается подзаголовок своих жаренные
+            своего
+            что власти там однажды над строчка он пунктуация буквоград парадигматическая, свою, ее себя правилами
+            скатился
             языком буквенных дорогу, ручеек свое города сбить lorem жизни! Вопрос, если инициал это безопасную он там
             строчка предложения агентство свой? Путь языкового его языком несколько своего безопасную ведущими раз жизни
             диких вершину, журчит пор великий даже пустился взгляд, по всей которое? Что силуэт, свой семантика ручеек
             составитель текста коварных лучше предупредила, своих точках буквенных которое бросил но повстречался мир?
-            Коварный маленький дорогу, однажды строчка прямо правилами запятой страна диких до заглавных что океана она то
+            Коварный маленький дорогу, однажды строчка прямо правилами запятой страна диких до заглавных что океана она
+            то
             если вскоре своего переулка решила дал великий предложения знаках текста которой дороге!</p>
         <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вопрос маленький знаках
             дороге имени большой жизни, составитель пояс страну, ведущими своего, ему вдали моей. Своего букв правилами
@@ -31,8 +36,10 @@
             взгляд толку власти ее страну раз? Пустился!</p>
         <p>Далеко-далеко за словесными горами в стране гласных.0</p>
         <br><br><br><br><br><br><br><br><br><br><br><br>
-        <div class="figure">
-            <div class="rectangle"></div>
+        <br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br>
+        <div class="rectangle">
             <div class="circle"></div>
         </div>
     </div>
