--- a/index.html
+++ b/index.html
@@ -134,6 +134,18 @@
                     <li class="content__list-item">
                         <a href="maket_bem_m2/">Макет сайта мой</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="homework_les68_m2/">ДЗ Позиционирование</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="homework_les69_m2/">ДЗ Трансформация</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="homework_les71_m2_dz/">ДЗ Псевдоэлементы</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="homework_les72_m2/">ДЗ Переходы</a>
+                    </li>
                     
                 </ul>
             </div>
