--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <a href="lesson_form_m2/">Урок Формы</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="maket_bem_m2/">Макет сайта мой</a>
+                        <a href="maket_bem_m2/">БЭМ"></a>
                     </li>
                     <li class="content__list-item">
                         <a href="homework_les68_m2/">ДЗ Позиционирование</a>
