--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
                     <li class="content__list-item">
                         <a href="homework_les72_m2/">ДЗ Переходы</a>
                     </li>
+                    <!-- <li class="content__list-item">
+                        <a href="homework_les72_m2/">ДЗ Переходы</a>
+                    </li> -->
                     
                 </ul>
             </div>
