--- a/lesson75_m2/index.html
+++ b/lesson75_m2/index.html
@@ -23,6 +23,15 @@
                     <div class="grid-1__item grid-1__item--4 item">4</div>
                     <div class="grid-1__item grid-1__item--5 item">5</div>
                     <div class="grid-1__item grid-1__item--6 item">6</div>
+                    <div class="grid-1__item grid-1__item--6 item">6</div>
+                    <div class="grid-1__item grid-1__item--6 item">6</div>
+                    <div class="grid-1__item grid-1__item--6 item">6</div>
+                    <div class="grid-1__item grid-1__item--6 item">6</div>
+                    <div class="grid-1__item grid-1__item--6 item">6</div>
+                    <div class="grid-1__item grid-1__item--6 item">6</div>
+                    <div class="grid-1__item grid-1__item--6 item">6</div>
+                    <div class="grid-1__item grid-1__item--6 item">6</div>
+                    <div class="grid-1__item grid-1__item--6 item">6</div>
                 </div>
             </div>
         </div>
@@ -35,8 +44,11 @@
                     <div class="grid-3__item item">3</div>
                     <div class="grid-3__item item">4</div>
                     <div class="grid-3__item item">5</div>
-                    <div class="grid-3__item grid-3__item--6 item">6</div>
+                    <div class="grid-3__item item">6</div>
                     <div class="grid-3__item item">7</div>
+                    <div class="grid-3__item item">8</div>
+                    <div class="grid-3__item item">9</div>
+                    <div class="grid-3__item item">10</div>
                 </div>
             </div>
         </div>
