--- a/lesson_83_m2/index.html
+++ b/lesson_83_m2/index.html
@@ -26,7 +26,7 @@
         </section>
         <section class="section-2">
             <h1 class="title">
-                Переменные
+                Нажми меня
             </h1>
             <p class="text">
                 Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Проектах заманивший
