--- a/maket_№2/index.html
+++ b/maket_№2/index.html
@@ -89,9 +89,125 @@
                 </div>
             </div>
             <div class="hero__video">
-            <video autoplay muted loop src="media/hero-bg.mp4"></video>
+                <video autoplay muted loop src="media/hero-bg.mp4"></video>
             </div>
         </section>
+        <div class="main__general">
+            <div class="container">
+                <div class="main__wrapper">
+                    <aside class="sidebar">
+                        <nav class="sidebar__nav">
+                            <ul class="sidebar__list">
+                                <li class="sidebar__item">
+                                    <a class="sidebar_link" href="#">
+                                        Раздел магазина
+                                    </a>
+                                <li class="sidebar__item">
+                                    <a class="saidebar_link" href="#">
+                                        Раздел магазина
+                                    </a>
+                                <li class="sidebar__item">
+                                    <a class="saidebar_link" href="#">
+                                        Раздел магазина
+                                    </a>
+                                <li class="sidebar__item">
+                                    <a class="saidebar_link" href="#">
+                                        Раздел магазина
+                                    </a>
+                                <li class="sidebar__item">
+                                    <a class="saidebar_link" href="#">
+                                        Раздел магазина
+                                    </a>
+                            </ul>
+                        </nav>
+                    </aside>
+                    <div class="main__body">
+                        <div class="main_gallery gallery">
+                            <a class="gallery__image gallery__image--big-left" href="#">
+                                <img src="img/laptop.jpg" alt="laptop">
+                                <div class="gallery__hint">Подробнее</div>
+                            </a>
+                            <a class="gallery__image" href="#">
+                                <img src="img/laptop.jpg" alt="laptop">
+                                <div class="gallery__hint">Подробнее</div>
+                            </a>
+                            <a class="gallery__image" href="#">
+                                <img src="img/laptop.jpg" alt="laptop">
+                                <div class="gallery__hint">Подробнее</div>
+                            </a>
+                            <a class="gallery__image" href="#">
+                                <img src="img/laptop.jpg" alt="laptop">
+                                <div class="gallery__hint">Подробнее</div>
+                            </a>
+                            <a class="gallery__image" href="#">
+                                <img src="img/laptop.jpg" alt="laptop">
+                                <div class="gallery__hint">Подробнее</div>
+                            </a>
+                            <a class="gallery__image gallery__image--big-right" href="#">
+                                <img src="img/laptop.jpg" alt="laptop">
+                                <div class="gallery__hint">Подробнее</div>
+                            </a>
+                            <a class="gallery__image" href="#">
+                                <img src="img/laptop.jpg" alt="laptop">
+                                <div class="gallery__hint">Подробнее</div>
+                            </a>
+                            <a class="gallery__image" href="#">
+                                <img src="img/laptop.jpg" alt="laptop">
+                                <div class="gallery__hint">Подробнее</div>
+                            </a>
+                            <a class="gallery__image" href="#">
+                                <img src="img/laptop.jpg" alt="laptop">
+                                <div class="gallery__hint">Подробнее</div>
+                            </a>
+                            <a class="gallery__image" href="#">
+                                <img src="img/laptop.jpg" alt="laptop">
+                                <div class="gallery__hint">Подробнее</div>
+                            </a>
+                        </div>
+                        <ul class="products">
+                            <li class="products__item">
+                                <img src="img/watch.jpg" alt="Watch">
+                                <div class="products__item-footer">
+                                    <a class="button" href="#">Кнопка</a>
+                                </div>
+                            </li>
+                            <li class="products__item">
+                                <img src="img/watch.jpg" alt="Watch">
+                                <div class="products__item-footer">
+                                    <a class="button" href="#">Кнопка</a>
+                                </div>
+                                <div class="products__item--banner">МегаХит</div>
+                            </li>
+                            <li class="products__item">
+                                <img src="img/watch.jpg" alt="Watch">
+                                <div class="products__item-footer">
+                                    <a class="button" href="#">Кнопка</a>
+                                </div>
+                            </li>
+                            <li class="products__item">
+                                <img src="img/watch.jpg" alt="Watch">
+                                <div class="products__item-footer">
+                                    <a class="button" href="#">Кнопка</a>
+                                </div>
+                                <div class="products__item--banner">МегаХит</div>
+                            </li>
+                            <li class="products__item">
+                                <img src="img/watch.jpg" alt="Watch">
+                                <div class="products__item-footer">
+                                    <a class="button" href="#">Кнопка</a>
+                                </div>
+                            </li>
+                            <li class="products__item">
+                                <img src="img/watch.jpg" alt="Watch">
+                                <div class="products__item-footer">
+                                    <a class="button" href="#">Кнопка</a>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer"></footer>
 
