--- a/maket_№2/index.html
+++ b/maket_№2/index.html
@@ -95,11 +95,23 @@
         <div class="main__general">
             <div class="container">
                 <div class="main__wrapper">
-                    <aside class="sidebar">
+                    <aside class="main__sidebar sidebar">
                         <nav class="sidebar__nav">
                             <ul class="sidebar__list">
                                 <li class="sidebar__item">
                                     <a class="sidebar_link" href="#">
+                                        Раздел магазина
+                                    </a>
+                                <li class="sidebar__item">
+                                    <a class="saidebar_link" href="#">
+                                        Раздел магазина
+                                    </a>
+                                <li class="sidebar__item">
+                                    <a class="saidebar_link" href="#">
+                                        Раздел магазина
+                                    </a>
+                                <li class="sidebar__item">
+                                    <a class="saidebar_link" href="#">
                                         Раздел магазина
                                     </a>
                                 <li class="sidebar__item">
@@ -164,43 +176,56 @@
                                 <div class="gallery__hint">Подробнее</div>
                             </a>
                         </div>
+                        <!-- =========================================================================  -->
                         <ul class="products">
                             <li class="products__item">
-                                <img src="img/watch.jpg" alt="Watch">
+                                <div class="products__item-img">
+                                    <img src="img/watch.jpg" alt="Watch">
+                                </div>
                                 <div class="products__item-footer">
-                                    <a class="button" href="#">Кнопка</a>
+                                    <a class="products__item-button button" href="#">Кнопка</a>
                                 </div>
                             </li>
                             <li class="products__item">
-                                <img src="img/watch.jpg" alt="Watch">
-                                <div class="products__item-footer">
-                                    <a class="button" href="#">Кнопка</a>
+                                <div class="products__item-img">
+                                    <img src="img/watch.jpg" alt="Watch">
+                                    <div class="products__item-badge">МегаХит</div>
                                 </div>
-                                <div class="products__item--banner">МегаХит</div>
-                            </li>
-                            <li class="products__item">
-                                <img src="img/watch.jpg" alt="Watch">
                                 <div class="products__item-footer">
-                                    <a class="button" href="#">Кнопка</a>
+                                    <a class="products__item-button button" href="#">Кнопка</a>
                                 </div>
                             </li>
                             <li class="products__item">
-                                <img src="img/watch.jpg" alt="Watch">
-                                <div class="products__item-footer">
-                                    <a class="button" href="#">Кнопка</a>
+                                <div class="products__item-img">
+                                    <img src="img/watch.jpg" alt="Watch">
+                                    <div class="products__item-badge">МегаХит</div>
                                 </div>
-                                <div class="products__item--banner">МегаХит</div>
-                            </li>
-                            <li class="products__item">
-                                <img src="img/watch.jpg" alt="Watch">
                                 <div class="products__item-footer">
-                                    <a class="button" href="#">Кнопка</a>
+                                    <a class="products__item-button button" href="#">Кнопка</a>
                                 </div>
                             </li>
                             <li class="products__item">
-                                <img src="img/watch.jpg" alt="Watch">
+                                <div class="products__item-img">
+                                    <img src="img/watch.jpg" alt="Watch">
+                                </div>
                                 <div class="products__item-footer">
-                                    <a class="button" href="#">Кнопка</a>
+                                    <a class="products__item-button button" href="#">Кнопка</a>
+                                </div>
+                            </li>
+                            <li class="products__item">
+                                <div class="products__item-img">
+                                    <img src="img/watch.jpg" alt="Watch">
+                                </div>
+                                <div class="products__item-footer">
+                                    <a class="products__item-button button" href="#">Кнопка</a>
+                                </div>
+                            </li>
+                            <li class="products__item">
+                                <div class="products__item-img">
+                                    <img src="img/watch.jpg" alt="Watch">
+                                </div>
+                                <div class="products__item-footer">
+                                    <a class="products__item-button button" href="#">Кнопка</a>
                                 </div>
                             </li>
                         </ul>
@@ -209,7 +234,9 @@
             </div>
         </div>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        
+    </footer>
 
 
 
