--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
                         <li class="content__list-item">
                             <a href="lesson_83_m2/">ДЗ Переменные</a>
                         </li>
+                        <li class="content__list-item">
+                            <a href="maket_№2/">Макет №2 - ДЗ</a>
+                        </li>
 
                     </ul>
                 </div>
