--- a/index.html
+++ b/index.html
@@ -163,6 +163,12 @@
                         <li class="content__list-item">
                             <a href="maket_№2/">Макет №2 - ДЗ</a>
                         </li>
+                        <li class="content__list-item">
+                            <a href="lesson101_JS_m2/">Функции ДЗ</a>
+                        </li>
+                        <li class="content__list-item">
+                            <a href="lesson103_JS_m2/">Урок 103- ДЗ</a>
+                        </li>
 
                     </ul>
                 </div>
